--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <header>
+    <!-- Encapsula todo el contenido e imagenes -->
+    <div class="main-content">
+      <div class="iPhones">
+        <!-- Imagen del iPhone -->
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Capture and Share the World's Moments
+      <!-- Div del lado derecho del iphone -->
+      <div class="right-side">
+        <div class="icono-login">
+          <!-- Icono-Titulo-Log in  -->
+          <img class="vertical-align logo" src="images/brand.png" alt="Instagram">
+          <button class="right-align">
+            <img class="vertical-align" src="images/home.png" alt="Home"> Log in</button>
+        </div>
+        <div class="content">
+          <h2>Capture and Share the World's Moments</h2>
+          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video,
+            choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share
+            to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="app-store-icons">
+          <!-- appstore y google play -->
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <div>
+      <!-- Fondo blanco -->
+    </div>
+  </main>
+  <footer>
+    <ul class="footer-menu">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="color-grey">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
