--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Instagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <div id="blue-background">
+    <div id="container">
+      <section id="iphones">
+        <img src="images/phones.png" alt="iPhones">
+      </section>
+      <section id="content">
+        <div>
+          <img src="images/brand.png" alt="Instagram logo" id="logo">
 
-  Capture and Share the World's Moments
+          <a href="#" class="btn-link">
+            <img src="images/home.png" alt="Home icon">Log in</a>
+        </div>
+        <div class="clearfix"></div>
+        <article id="content-tab">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Instagram is a
+            <b>fast</b>,
+            <b>beautiful</b> and
+            <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+          <a href="#">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="Get it on Google play">
+          </a>
+        </article>
+      </section>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <a href="#">
+        <li>About Us</li>
+      </a>
+      <a href="#">
+        <li>Support</li>
+      </a>
+      <a href="#">
+        <li>Blog</li>
+      </a>
+      <a href="#">
+        <li>Press</li>
+      </a>
+      <a href="#">
+        <li>API</li>
+      </a>
+      <a href="#">
+        <li>Jobs</li>
+      </a>
+      <a href="#">
+        <li>Privacy</li>
+      </a>
+      <a href="#">
+        <li>Terms</li>
+      </a>
+      <li>
+        <span>&copy; 2014 Instagram</span>
+      </li>
+    </ul>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
