--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header></header>
+  <main>
+    <section class="general-container">
+      <div class="phones-container">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="logo-container">
+        <img src="images/brand.png" alt="logo-instagram">
+      </div>
+      <div class="button-container">
+        <button>
+          <img class="logo-home" src="images/home.png" alt="logo-home"> Log in</button>
+      </div>
+    </section>
+      <div class="frame">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a
+          <b>fast</b>,
+          <b>beautiful</b> and
+          <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="badge-iphone">
+        <img src="images/badge-android.png" alt="badge-android">
+      </div>
+  </main>
+  <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
 </body>
 </html>
