--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="section1"> 
+    <img class="img1" src="images/phones.png" alt="">
+  </section>
+  <section>
+    <img class="img2" src="images/brand.png" alt="">
+    <button>
+      <img src="images/home.png" alt="">
+      <span class="txtlog">Log in </span>
+    </button>
+  </section>
+  <section class="txt">
+    <h3>Capture and Share the World's Moments </h3>
+    <p> Instagram is a
+      <b> fast, beautiful</b> and
+      <b>fun</b> way to share your life with friends and family. Take a picture or video, choose a filter to transform its look
+      and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+      It's a new way to see the world. Oh yeah, did we mention it's free?
+    </p>
+  <img src="images/badge-iphone.png" alt=""> 
+  <img src="images/badge-android.png" alt="">
+  </section>
+  <div class="clearfix" ></div>
+ 
+  <footer>
+    <ul>
+      <li> About Us </li>
+      <li> Support </li>
+      <li> Blog</li>
+      <li> Press</li>
+      <li> API </li>
+      <li> Jobs</li>
+      <li> Privacy </li>
+      <li> Terms</li>     
+    </ul>
+     <span class="gris">&copy; 2014 Instagram</span> 
+  </footer>
 </body>
+
 </html>
