--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="content">
+      <div class="head-bg"></div>
+      <div class="phoneImg">
+        <img src="images/phones.png" alt="phones">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <div class="container">
+        <div class="logo"><img src="images/brand.png" alt="Instagram brand"></div>
+        <div class="home-btn"><img src="images/home.png" alt="home button"><span> Log-In</span></div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="copy-wrapper">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+            <br>&nbsp;<br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>&nbsp;<br>
+            Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <img src="images/badge-iphone.png" alt="iphone Download">
+            <img src="images/badge-android.png" alt="iphone Download">
+    </div>
 
-  &copy; 2014 Instagram
+  </section>
+   
+  <section class="section-menu">
+      <div class="menu">
+
+          <span>About Us</span>
+          <span>Support</span>
+          <span>Blog</span>
+          <span>Press</span>
+          <span>Jobs</span>
+          <span>Privacy</span>
+          <span>Terms</span>
+          <span id="c-tag">&copy; 2014 Instagram</span>
+        </div>
+  </section>
+
 </body>
 </html>
