--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="top-gradient">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="content-pos">
+    <div class="content-wrapper">
+      <div class="phone">
+        <img src="./images/phones.png">
+      </div>
+      <div class="content">
+        <div class="top-row">
+          <img src="./images/brand.png" id="brand">
+          <div class="login">
+            <img src="./images/home.png">
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="white-block">
+          <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <div class="download">
+            <img src="./images/badge-android.png">
+            <img src="./images/badge-iphone.png">
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="links">
+        <p>About Us</p>
+        <p>Support</p>
+        <p>Blog</p>
+        <p>Press</p>
+        <p>API</p>
+        <p>Jobs</p>
+        <p>Privacy</p>
+        <p>Terms</p>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
