--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Sofia" rel="stylesheet">
+
 </head>
 <body>
-  Instagram
+ 
+  <div class=firstdiv>
 
-  Capture and Share the World's Moments
+</div>
+<div class=bigcenter >
+<section class=firstbox>
+    <img src='images/brand.png'>
+   <div class=homebutton> <button type="submit" style="background-color:transparent;color:white;font-size:larger" > 
+        <img src="images/home.png" height="35"/> Log in</button>
+    </div>
+<div class=whitething>
+  <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  Oh yeah, did we mention it's free? 
+  <br>
+  <br>
+  <a href = "https://www.apple.com" target = "_self"> 
+  <img src= 'images/badge-iphone.png' >
+  </a>
+  <a href = "https://www.apple.com" target = "_self"> 
+    <img src= 'images/badge-android.png' >
+    </a>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
+ 
+</section>
+<img src= 'images/phones.png' class=phone>
+</div>
+<section class=bottomline>
+  <b>ABOUT US
+  SUPPORT
+  BLOG
+  PRESS
   API
-  Jobs
-  Privacy
-  Terms
+  JOBS
+  PRIVACY
+  TERMS</b>
 
   &copy; 2014 Instagram
+
+  </section>
 </body>
 </html>
