--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="container">
+    <nav>
+    </nav>
+    <header class="header">
+    </header>  
+    <section class="main">
+      <article class="phones">
+          <img src="./images/phones.png" alt="Phones picture">
+      </article>
+      <article class="info">
+        <div class="top-info">
+            <img src="./images/brand.png" alt="Instagram brand logo" class="logo">
+            <button class="btn"><img src="./images/home.png" alt="Home icon"> Log in</button>
+        </div>
+        <div class="middle-info">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong>  and <strong>fun</strong>  way to
+              share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look
+            and feel, then post to Instagram &mdash; it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a
+            new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="badge-buttons">
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </article>
+      <div class="clear-fix"></div>
+      <section class="footer">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span>&copy; 2014 Instagram</span></li>
+        </ul>
+      </section>
+    </section>    
+  </div>
 </body>
 </html>
