--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="gradient"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="content-wrapper">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="things">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="insta">
+        <img src="images/brand.png" alt="brand">
 
-  &copy; 2014 Instagram
+        <div class="homebutton" type="submit">
+          <img id="home" src="images/home.png" alt="iphone">
+          <span>Log in</span>
+        </div>
+      </div>
+      <div class="contents">
+        <div class="texts">
+          <div class="heading">
+            <h1>Instagram Capture and Share the World's Moments</h1>
+          </div>
+          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video,
+            choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share
+            to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+        </div>
+      </div>
+      <div class="platforms">
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="phones">
+      </div>
+
+
+    </div>
+
+    <footer>
+
+      <ul>
+        <li><a href="#">About Us </a></li>
+        <li><a href="#">Support </a></li>
+        <li><a href="#">Blog </a></li>
+        <li><a href="#">Press </a></li>
+        <li><a href="#">API </a></li>
+        <li><a href="#">Jobs </a></li>
+        <li><a href="#">Privacy </a></li>
+        <li><a href="#">Terms </a></li>
+        <li>&copy; 2014 Instagram </li>
+      </ul>
+    </footer>
+
+  </div>
+
+
+
 </body>
+
 </html>
