--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header class="header">
+</header>
+<section>
+  <div>
+  <img class="phone" src="/starter-code/images/phones.png">
+  </div>
+  <div>
+    <div>
+      <img class="brand" src="images/brand.png">
+    </div>
+    <div id="button">
+        <img class="home" src="images/home.png">
+      <h3>Log In </h3> 
+    </div>
+    <div>
+      
+    </div>
+    <div class="text">
+      <p>
+    <strong style="color: #1c5380">Capture and Share the World's Moments</strong> <br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free? <br>
+  
+    <img style="float: left" src="/starter-code/images/badge-android.png">
+    <img src="/starter-code/images/badge-iphone.png">
+  </p>  
+  </div>
+  </div>
+</section>
+<footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <strong>&copy; 2014 Instagram</strong>
+</footer>
 </body>
 </html>
