--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <body>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <img src="images/phones.png" alt="Phones"/>
 
-  Oh yeah, did we mention it's free?
+      <div class="right">
 
-  Download on the App Store
-  Get it on Google Play
+          <a href="#">
+            <img id="logo" src="images/brand.png" alt="Instagram-Logo"/>
+          </a>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <div class="log-in">
 
-  &copy; 2014 Instagram
-</body>
+            <a href="#">
+              <img id="home" src="images/home.png" alt="home"/>
+              <p>Log in</p>
+            </a>
+
+          </div>
+
+        <div class="clearfix"></div>
+
+        <div class="info">
+
+          <h1>Capture and Share <br>the World's Moments</h1>
+
+          <div class="text">
+            <p>  
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            </p>
+            <p>  
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>  
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
+
+          <a href="#">
+            <img id="first"src="images/badge-iphone.png" alt="Download on the App Store"/>
+          </a>
+
+          <a href="#">
+              <img src="images/badge-android.png" alt="Get it on Google play"/>
+            </a>
+
+        </div>
+
+      </div>
+
+    </div>
+    
+    <div class="clearfix"></div>
+
+    <div class="footer">
+
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+
+    </div>
+
+  </body>
 </html>
