completed layout, button styling and description body styling is still missing

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <div class="phone__container">
 
-  Capture and Share the World's Moments
+      <div class="phone__container--img"></div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="description__container">
+      <header class="description__header">
+        <div class="description__header--title"></div>
+        <button class="btn--login">Log in</button>
+      </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="description__body">
+        <div class="description__text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video,
+            choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share
+            to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="description__cta">
+          <div class="description__cta--apple"></div>
+          <div class="description__cta--android"></div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <a href="#">About us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <span href="#">@Copyright</span>
+    </footer>
+  </div>
 </body>
+
 </html>
