--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="top"></div>
+<div class="bottom"></div>
+<div class="iphone">
+  <img src="/starter-code/images/phones.png" alt="">
+</div>
+<div class="content">
+  <div class="wrapper1">
+    <img src="/starter-code/images/brand.png" alt="">
+  </div>
+  <span class="button"> <img src="images/home.png" alt=""> Log In</span>
+  <div class="wrapper2">
+    <div class="text">
+    <h3>Capture and Share <br>
+      the World's Moments</h3>
+    <p>Instagram is a <strong> fast, beautiful </strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>    
+    <p>Oh yeah, did we mention it's free?</p>
+    <img src="/starter-code/images/badge-iphone.png" alt="">
+    <img src="/starter-code/images/badge-android.png" alt="">
+  </div>
+  </div>
+</div>
+<div class="footer">
+    <a href="">About Us</a href="">
+    <a href="">Support</a href="">
+    <a href="">Blog</a href="">
+    <a href="">Press</a href="">
+    <a href="">API</a href="">
+    <a href="">Jobs</a href="">
+    <a href="">Privacy</a href="">
+    <a href="">Terms</a href="">
+    <span class="copyright">&copy; 2014 Instagram</span>
+</div>
+</div>
 </body>
 </html>
+
