--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <div>
+      <img src="./images/brand.png" alt="">
+      <button class='login'>
+        <div>
+          <img src="./images/home.png" alt="">
+        </div>
+        <div>
+           <span>Log in</span>
+        </div>
+      </button>
+    </div>
+    <div class='clear'></div>
+    
+  </header>
 
-  Capture and Share the World's Moments
+  <section>
+    <div class='container'>
+       <img id='iphone' src="./images/phones.png" alt="">
+    </div>
+   
+  </section>
 
+  <section class='intro'>
+    <h2>  Capture and Share the World's Moments</h2>
+  <p>
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </p>
+  <p>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </p>
+  <p>
+      Oh yeah, did we mention it's free?
 
-  Oh yeah, did we mention it's free?
+  </p>
+  <a>
+    <img src="./images/badge-iphone.png" alt="">
+  </a>
+  <a>
+    <img src="./images/badge-android.png" alt="">
+  </a>
+  </section>
+  <div class='clear'></div>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li class='link'>About Us</li>
+      <li class='link'>Support</li>
+      <li class='link'>Blog</li>
+      <li class='link'>Press</li>
+      <li class='link'>API</li>
+      <li class='link'>Jobs</li>
+      <li class='link'>Privacy</li>
+      <li class='link'>Terms</li>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+    
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+  
 </body>
 </html>
