--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <div class="iphone">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <img src="images/phones.png" alt="phone">
+    </div>
+    <div class="content">
+      <div class="contentTop">
+        <img src="images/brand.png" alt="brand" class="floatLeft">
+        <div class="floatRight">
+            <img src="images/home.png" alt="home" >
+            login
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </div>
+        
+      </div>
+      <div class="clear"></div>
+      <div class="contentMiddle">
+        <h3>
+          Capture and Share the World's Moments
+        </h3>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+        Instagram is a
+        <b> fast</b>,
+        <b> beautiful</b> and
+        <b> fun</b> way to share your life with friends and family.
+        <br>
+        <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        <br> Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play
+      </div>
+      <div class="clear"></div>
+      <div class="contentBottom">
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="android">
+      </div>
+    </div>
+    <div class="clear"></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  <footer>
+    About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
