--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
+  <img src="images/bgtile.png" class="imginfo" alt="">
+  <img src="images/brand.png" class="brand" alt="">
+  
+  <div class="frame">Log in</div>
 
-  Capture and Share the World's Moments
+  <img src="images/phones.png" class="phones" alt="">
+  <img src="images/home.png" class="login" alt="">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="rbox"><h3>Capture and Share the World's Moments</h3>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
   Oh yeah, did we mention it's free?
+  <img src="images/badge-iphone.png" class="appbutton" alt="">
+  <img src="images/badge-android.png" class="appbutton" alt="">
 
-  Download on the App Store
-  Get it on Google Play
+</p><br></div> 
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
+  <br>
+  
+  
+  <div class="footer">
+  About Us Support Blog Press API Jobs Privacy Terms
+  </div>
+  <div class="copyright"><p>&copy;2014 Instagram</p></div>
+</div>
 </body>
 </html>
