BER Astrid Varga

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="background">
+    <section class="centered-wrapper">
+      <div class="iPhones">
+        <img src="images/phones.png" alt="Pretty iPhones">
+      </div>
+      <section class="info-wrapper">
+        <div>
+          <img src="images/brand.png" alt="">
+          <div class="log-in">  
+            <div class="home">
+              <img src="images/home.png" alt="">
+            </div>
+            <div class="log-in-txt">
+              <p>Log in</p>
+            </div>
+          </div>
+        </div>
+        <div class="info-text-wrapper">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="download-btns">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </section>
+      <footer>
+        <div class="navigation">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <p>&copy; 2014 Instagram</p>
+        </div>
+      </footer>
+    </section>
+  </section>
 </body>
 </html>
