done- trouble with copyright and button text

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <!--Left Column Phones-->
+    <img class="phones" src="images/phones.png" alt="phones">
+    <!--Right Column Content-->
+    <div class="content">
+      <img class="insta" src="images/brand.png" alt="Instagram">
+      <button class="login">
+        <img src="images/home.png" alt="home"><p>Log in</p></button>
+      <div class="frame">
+        <div class="info-box">
+          <h1>Capture and Share the World's Moments</h1>
+          <p class="info-text">Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+          <p class="info-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p class="info-text">Oh yeah, did we mention it's free?</p>
+        </div>
+        <button>
+          <img class="bottom-left" src="images/badge-iphone.png" alt="Apple">
+        </button>
+        <button>
+          <img class="bottom-left2" src="images/badge-android.png" alt="Android">
+        </button>
+      </div>
+      </div>
+<!-- Nav Bar -->
+    <div class="clear nav">
+      <a href="#">About Us </a>
+      <a href="#">Support </a>
+      <a href="#">Blog </a>
+      <a href="#">Press </a>
+      <a href="#">API </a>
+      <a href="#">Jobs </a>
+      <a href="#">Privacy Terms</a>
+      <p class="copyright">&copy; 2014 Instagram</p>
+    </div>
+  </div>
 </body>
+
 </html>
