--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header-wrapper"></div>
+  <section class="main">
+    <img src="./images/phones.png" class="phone-pic">
+    <div class="ad-text">
+      <img src="./images/brand.png" class="brand">
+      <div class="log-in">
+        <img src="./images/home.png" class="home"><div class="log-text">Log In</div>
+      </div>
+    </br>
+      <div class="frame">
+        <h2> </h2>
+        <h3>Capture and Share the World's Moments</h3>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="./images/badge-android.png" class="buttons">
+        <img src="./images/badge-iphone.png" class="buttons">
+      </div>
+    </div>
+    <div class="footer">
+        <p class="contact">About Us</p>
+        <p class="contact">Support</p>
+        <p class="contact">Blog</p>
+        <p class="contact">Press</p>
+        <p class="contact">API</p>
+        <p class="contact">Jobs</p>
+        <p class="contact">Privacy</p>
+        <p class="contact">Terms</p>
+        <p class="contact copyright">&copy; 2014 Instagram</p>
+      </div>
+  </section>
+  
 </body>
 </html>
