--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+ <main>
+<div class="collumn1">
+<img src="images/phones.png">
+</div>
+<div class="collumn2">
+<img src="images/brand.png" alt="Instagram" class="logo">
+<div class="button">
+  
+  <a href="" type="button">
+      <img src="images/home.png">
+      Log in</a>
+</div>
+<div class="text">
+<h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+<br>
+<br>
+  Take a picture or video, choose a filter to transform its look and feel, then post to
+  Instagram &mdash; it's that easy. You can even share to Facebook, Twitter,
+  Tumblr and more. It's a new way to see the world.
+<br>
+<br>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="clearfix"></div>
+<div class="bottomPic">
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+  </div>
+</div>
+</div>
+</main>
+<div class="clearfix"></div>
+<footer class="footer">
+  <a href="">About Us</a>
+  <a href="">Support</a>
+  <a href="">Blog</a>
+  <a href="">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Termy</a>
+  <p>&copy; 2014 Instagram</p>
+</footer>
 </body>
 </html>
