--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue"></div>
+  <div class="wrapper">
+    <div class="phone">
+      <img src="./images/phones.png" alt="phone">
+    </div>
+    <div class="main">
+      <div class="top">
+        <img src="./images/brand.png" alt="brand image">
+        <a href="#">
+          <img src="./images/home.png" alt="log in image">
+          <p>Log in</p>
+        </a>
+      </div>
+      <div class="bottom">
+        <h1>Capture and Share <br/>the World's Moments</h1>
+        <p>Instagram is a <span>fast, beautiful</span> and fun way to share your life with friends and family.
+          <br/>
+          <br/>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br/> 
+          <br/>       
+          Oh yeah, did we mention it's free?
+          <br/>
+          <br/>
+          Download on the App Store
+          Get it on Google Play</p>
+        <div class="badge">
+          <img src="./images/badge-iphone.png" alt="bage iphone">
+          <img src="./images/badge-android.png" alt="bage android">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nav">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
 </html>
+  
+  
+  
+  
+  
+  
+  
+
