--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+  </head>
+  <body>
+    <div class="gradient"></div>
+    <div id="content-wrapper">
+      <div class="phones">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="elements">
+        <div class="insta">
+          <img src="images/brand.png" alt="brand">
+          <div class="homebutton" type="submit">
+            <img id="home" src="images/home.png" alt="iphone">
+            <span>Log in</span>
+          </div>
+        </div>
+        <div class="contents">
+          <div class="texts">
+            <div class="heading">
+              <h1>Instagram Capture and Share the World's Moments</h1>
+            </div>
+            <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. Take a picture or video,
+              choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share
+              to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+        <div class="platforms">
+          <img src="images/badge-iphone.png" alt="iphone">
+          <img src="images/badge-android.png" alt="phones">
+        </div>
+      </div>
+      <footer>
+        <ul>
+          <li>
+            <a href="#">ABOUT US</a>
+          </li>
+          <li>
+            <a href="#">SUPPORT</a>
+          </li>
+          <li>
+            <a href="#">BLOG</a>
+          </li>
+          <li>
+            <a href="#">PRESS</a>
+          </li>
+          <li>
+            <a href="#">API</a>
+          </li>
+          <li>
+            <a href="#">JOBS</a>
+          </li>
+          <li>
+            <a href="#">PRIVACY</a>
+          </li>
+          <li>
+            <a href="#">TERMS</a>
+          </li>
+          <li>&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
