--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="header-wrapper"></div>
 
-  Capture and Share the World's Moments
+  <div class="center">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-side">
+        <img src="./images/phones.png" alt="Phones">
+    </div>
+    
+    <div class="right-side">
+      <div>
+        <img src="./images/brand.png" alt="Instagram Logo">
+        <button>
+          <img class="button-image" src="./images/home.png">
+          <span>Log in</span>
+        </button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="content">
+        <h2>Capture and Share<br /> the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transfo
+          rm its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <img class="download" src="./images/badge-iphone.png" alt="Download App Store">
+        <img class="download" src="./images/badge-android.png" alt="Download Google play">
+      </div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="links">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+  </div>
+
 </body>
 </html>
