instagram by Alberto

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header class="header"></header>
+  <main class="main">
+    <section class="leftSide"><img src="images/phones.png" alt="telefonos"></section>
+    <section class="rithgSide">
+      <div class="upSide">
+        <img src="images/brand.png" alt="Logo">
+        <a id="btnHome" href="#"><img src="images/home.png" alt="Home"> Log in </a>
+      </div>
+      <div class="downSide">
+          <h3>Capture and Share<br>the World's Moments</h3>              
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="downSide-img">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play  ">
+          </div>
+          
+      </div>      
+    </section>
+  </main>
+  <footer>
+    <nav class="footer-nav"> 
+      <ul class="footer">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="footer-copy">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
