--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram clone</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
+
 <body>
-  Instagram
+  <main>
+  
+    <div class="phones">
+    <img src="images/phones.png" alt="phones" width="auto"></div> 
+    
+<section>
+    <header>
+        <div class="instagram"> <img src="images/brand.png" alt="Instagram logo" width="70%"></div>
+              <button class="button"><i class="fa fa-home"></i> Log in</button>
+        </header>  
+  <div class="container">
+      <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Oh yeah, did we mention it's free?</p>
+    <div class="badges">
+     <img src="images/badge-iphone.png" alt="app_store" width="28%">
+     <img src="images/badge-android.png" alt="android" width="28%">
+    </div>
+  </div>
+</section>
+</main>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <footer>
+    <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copyright">&copy; 2014 Instagram</li>
+  </ul>
+  </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  </body>
 </html>
