--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 </head>
 <body>
-  Instagram
+  <!--<h1>Instagram</h1>-->
+  <header>
+  <div class="header-icons"><img src="./images/brand.png" alt="instagram name and logo">
+  <span><img src="./images/home.png" alt="home">Log in</span>
+</div>
+  </header>
+  <main>
+    <img src="./images/phones.png" alt="iphone image">
 
-  Capture and Share the World's Moments
+    <div class="text">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class="badges">
+      <img src="./images/badge-iphone.png" alt="appstore">
+      <img src="./images/badge-android.png" alt="googleplay">
+      <p></p>
+  
+      <!--<a href="#"> Download on the App Store</a>
+      <a href="#">Get it on Google Play</a>-->
+    </div>
+      
+  </div>
+  
+  </main>
+  <footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li id="gris"> &copy; 2014 Instagram</li>
+  </ul>
+ 
+</footer>
 </body>
 </html>
