--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Box Model</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="blue-bg"></div>
+    <section class="wrapper">
+      <div class="upperdiv">
+        <div class="leftbox">
+            <img src="../starter-code/images/phones.png" alt="phones" class="">
+        </div>
+        <div class="rightbox">
+          <div class="rightbox-upperlogo">
+                <div class="rightbox-upperlogo2">
+                  <img src="../starter-code/images/brand.png" alt="brand" class="floatleft">
+                  <div class="floatright upperlogo-right">
+                    <img src="images/home.png" alt="home" class="floatleft home-img">
+                      <p class="log-in">Log In</p>
+                  </div>
+                  
+          </div>
+          <div class="rightbox-lowerlogo">
+            <div class=header3>
+            <h3>Capture and Share the World's Moments</h3>
+            </div>
+            <div class="p1">  
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            </div class="p2">
+            <div>    
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            </div> 
+            <div class="p3">   
+            <p>Oh yeah, did we mention it's free?</p>
+            </div>
+          </div>
 
-  Capture and Share the World's Moments
+          <div class=lowest-logo>
+              <img src= "../starter-code/images/badge-android.png" alt="Get it on Google Play" class="floatleft">
+              <img src="../starter-code/images/badge-iphone.png" alt="Download on the App Store" class="floatleft app-store">
+          </div>
+              
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="lowergif">
+          <div class="navigation">
+              <a href="url">ABOUT US</a>
+                <a href="url">SUPPORT</a>
+                <a href="url">BLOG</a>
+                <a href="url">PRESS</a>
+                <a href="url">API</a>
+                <a href="url">JOBS</a>
+                <a href="url">PRIVACY</a>
+                <a href="url">TERMS</a>
+          </div>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
