--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+  <div class="iphone">
+    <img src="images/phones.png" alt="Iphone">
+  </div>
+  <div class="rightDivs">
 
-  Capture and Share the World's Moments
+<div class="rightDivTop">
+    <div class="logo"><img src="images/brand.png" alt="Instagramlogo"></div>
+    <div class="button"><button name="home">
+      <img src="images/home.png" alt="homebutton">
+      Log in
+    </button></div>
+    
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
+<div class="rightDivMiddle">
+    <h1 class="text">Capture and Share<br>the World's Moments</h1>
+    <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. <br>You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>Oh yeah, did we mention it's free?</p>
+  
+</div>
+<div class="rightDivBottom">
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+<div class="clearfix"></div>
+</div>
+<footer class="footer">  
+  
+<a href='#' class="link" target="_blank">About Us</a>
+<a href='#' class="link" target="_blank">Support</a>
+<a href='#' class="link" target="_blank">Blog</a>
+<a href='#' class="link" target="_blank">Press</a>
+<a href='#' class="link" target="_blank">API</a>
+<a href='#' class="link" target="_blank">Jobs</a>
+<a href='#' class="link" target="_blank">Privacy</a>
+    <a href='#' class="link" target="_blank">Terms</a>
+    
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
