--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+   <head>
+      <title>Instagram</title>
+      <link rel="stylesheet" href="css/main.css">
+   </head>
+   <body>
+      <div class="iphone">
+         <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="logos">
+         <img src="images/brand.png" alt="Instagram" class="logos">
+         <a href="#" class="button"> <img src="images/home.png" >Log In</a>
+         <div class="clear-fix"></div>
+         <section id="white-box">
+            <h2 class="text1"><br>Capture and Share<br> the World's Moments</h2>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
+            <br>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br> Oh yeah, did we mention it's free? 
+         </section>
+         <img src="images/badge-iphone.png" alt="Download on the App Store">
+         <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+      <div class="clear-fix"></div>
+   </body>
+   <footer>
+      <div class="text2">
+         About Us
+         Support
+         Blog
+         Press
+         API
+         Jobs
+         Privacy
+         Terms
+    <div class="text3" > &copy; 2014 Instagram </div>
+    </div>
+   </footer>
 </html>
+
