--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <img src="./images/phones.png" alt="phones" id="phones">
+    <img src="./images/brand.png" alt="logo" id="logo">
+    <div id="login">
+      <img src="./images/home.png" alt="Login" id="loginimg">
+        <p>
+          Log in
+        </p> 
+    </div>
+    <div class="content">
+      <div class="padded">
+        <h1>
 
-  Capture and Share the World's Moments
+          Capture and Share the World's Moments
+        </h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="text">
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+            can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="downloads">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store">
+           <img src="./images/badge-android.png" alt="Get it on Google Play">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        </div>
 
-  &copy; 2014 Instagram
+
+      </div>
+    </div>
+
+    <div class="footer">
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </div>
+
+  </div>
 </body>
+
 </html>
