--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <div class="fondo-azul">
+    </div>
+    <div class="fondo-blanco">
+      <section class="container">
+      <img class="phones" src="images/phones.png" alt="phones">
+      <img class="logo" src="images/brand.png" alt="logotype">
+      <button class="button-log"><img src="images/home.png" alt="log button">Log in</button>
+      <div class="moments">
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way 
+          to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to 
+          Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, 
+          Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>  
+      <div class="botones">
+        <img src="images/badge-iphone.png" alt="apple store">
+        <img src="images/badge-android.png" alt="play store">
+      </div>
+    </section>
+    <ul class="menu">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+    </div>
+  </main>
 </body>
 </html>
