Correción a botón Log in

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
       <section class="container">
       <img class="phones" src="images/phones.png" alt="phones">
       <img class="logo" src="images/brand.png" alt="logotype">
-      <button class="button-log"><img src="images/home.png" alt="log button">Log in</button>
+      <button class="button-log"><img class="image-log"src="images/home.png" alt="log button">     Log in</button>
       <div class="moments">
         <h1>Capture and Share <br>the World's Moments</h1>
         <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way 
