--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="flexbox main">
+    <section>
+      <img src="./images/phones.png" alt="">
+    </section>
+    <section class="right-section">
+      <header class="flexbox">
+        <img src="./images/brand.png" alt="">
+        <button class="flexbox">
+          <img src="./images/home.png" alt="">
+          <p>Log in</p>
+        </button>
+      </header>
+      <div class="text">
+        <h2>Capture and Share<br/> the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="flexbox">
+        <div class="apps">
+          <img src="./images/badge-iphone.png" alt="">
+        </div>
+        <div class="apps">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+      </div>
+    </section>
+  </div>  
+  <footer class="flexbox">
+    <a href="#0">About us</a>
+    <a href="#0">Support</a>
+    <a href="#0">Blogs</a>
+    <a href="#0">Press</a>
+    <a href="#0">API</a>
+    <a href="#0">Jobs</a>
+    <a href="#0">Privacy</a>
+    <a href="#0">Terms</a>
+    <p>2014 Instagram</p>
+  </footer>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
