--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+      <div id="phone"></div>
+      <div class="content">
+       <header>
+        <img id="brand" src="./images/brand.png" alt="brand">
 
-  Capture and Share the World's Moments
+        <button id="home"><img src="./images/home.png" alt=""> Log in</button>
+    </header>
+  <div class="text">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, 
+    then post to Instagram &mdash; it's that easy. You can even share to Facebook, 
+    Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <button><img src="./images/badge-iphone.png" alt="badge-iphone"></button>
+      <button><img src="./images/badge-android.png" alt="badge-android"></button>
+    </div>
+    </div>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+  <ul>
+  <li><a href="#0">About Us</a></li>
+  <li><a href="#0">Support</a></li>
+  <li><a href="#0">Blog</a></li>
+  <li><a href="#0">Press</a></li>
+  <li><a href="#0">API</a></li>
+  <li><a href="#0">Jobs</a></li>
+  <li><a href="#0">Privacy</a></li>
+  <li><a href="#0">Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
+</footer>
 
-  &copy; 2014 Instagram
+<div class="white-box"></div>
 </body>
 </html>
